--- a/client_rbac.yaml
+++ b/client_rbac.yaml
@@ -17,11 +17,11 @@ rules:
   - apiGroups:
       - ""
     resources: ["pods", "pods/log"]
-    verbs: ["get", "list", "create", "delete"]
+    verbs: ["get", "list", "create", "delete", "watch"]
   - apiGroups:
       - ""
     resources: ["services"]
-    verbs: ["get", "list", "update", "create"]
+    verbs: ["get", "list", "update", "create", "delete"]
   - apiGroups:
       - ""
     resources: ["pods/portforward"]
@@ -29,7 +29,7 @@ rules:
   - apiGroups:
       - "apps"
     resources: ["deployments", "replicasets", "statefulsets"]
-    verbs: ["get", "list", "update"]
+    verbs: ["get", "list", "update", "create", "delete", "watch"]
   - apiGroups:
       - "getambassador.io"
     resources: ["hosts", "mappings"]
@@ -41,7 +41,7 @@ rules:
   - apiGroups:
       - "rbac.authorization.k8s.io"
     resources: ["clusterroles", "clusterrolebindings", "roles", "rolebindings"]
-    verbs: ["get", "list", "watch"]
+    verbs: ["get", "list", "watch", "create", "delete"]
   - apiGroups:
       - ""
     resources: ["namespaces"]
@@ -49,15 +49,19 @@ rules:
   - apiGroups:
       - ""
     resources: ["secrets"]
-    verbs: ["get", "create"]
+    verbs: ["get", "create", "list", "delete"]
   - apiGroups:
       - ""
     resources: ["serviceaccounts"]
-    verbs: ["get", "create"]
+    verbs: ["get", "create", "delete"]
   - apiGroups:
       - "admissionregistration.k8s.io"
     resources: ["mutatingwebhookconfigurations"]
-    verbs: ["get"]
+    verbs: ["get", "create", "delete"]
+  - apiGroups:
+      - ""
+    resources: ["nodes"]
+    verbs: ["list", "get", "watch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
