--- a/client_rbac.yaml
+++ b/client_rbac.yaml
@@ -6,13 +6,13 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: telepresence-test-developer
+  name: telepresence-admin
   namespace: default
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: telepresence-role
+  name: telepresence-admin-role
 rules:
   - apiGroups:
       - ""
@@ -68,10 +68,10 @@ kind: ClusterRoleBinding
 metadata:
   name: telepresence-clusterrolebinding
 subjects:
-  - name: telepresence-test-developer
+  - name: telepresence-admin
     kind: ServiceAccount
     namespace: default
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  name: telepresence-role
+  name: telepresence-admin-role
   kind: ClusterRole
